--- a/public/packages/offers-1.html
+++ b/public/packages/offers-1.html
@@ -16,7 +16,7 @@
                 <div class="md:flex items-center justify-between hidden">
                   <!-- Logo -->
                   <div class="pt-2">
-                    <a href="http://localhost/php/bbmtours-website-php/public/homepage.php">
+                    <a href="https://bbmtours.com/homepage.php">
                       <svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <polygon fill-rule="evenodd" points="9.414 12 16.707 19.293 15.293 20.707 6.586 12 15.293 3.293 16.707 4.707"/>
                       </svg>                    
@@ -39,7 +39,7 @@
                 <div class="flex items-center justify-between md:hidden pb-2">
                     <!-- Logo -->
                     <div class="p-3 px-5 pt-2 text-white bg-gray-400 bg-opacity-50 rounded-lg baseline hover:bg-gray-500">
-                      <a href="http://localhost/php/bbmtours-website-php/public/homepage.php">
+                      <a href="https://bbmtours.com/homepage.php">
                         <svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                           <polygon fill-rule="evenodd" points="9.414 12 16.707 19.293 15.293 20.707 6.586 12 15.293 3.293 16.707 4.707"/>
                         </svg>                    
@@ -220,28 +220,28 @@
           <iframe src="https://www.youtube.com/embed/2om0zQEdQO0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="mx-auto w-full h-72"></iframe>
         </div>
 
-        <p class="pl-2 uppercase font-semibold">Photos</p>
+        <p class="pl-2 uppercase font-semibold">Photos gallery</p>
         <div class="grid md:grid-cols-4 grid-cols-1 gap-2">
           <div class="max-w-sm drop-shadow-lg rounded-xl px-2 py-2">
-            <div style="background-image: url('../images/category/IMG-20220518-WA0007.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
+            <div style="background-image: url('img/gallery/IMG-20220518-WA0007.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
           </div>
           <div class="max-w-sm drop-shadow-lg rounded-xl px-2 py-2">
-            <div style="background-image: url('../images/category/IMG-20220518-WA0001.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
+            <div style="background-image: url('img/gallery/IMG-20220518-WA0001.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
           </div>
           <div class="max-w-sm drop-shadow-lg rounded-xl px-2 py-2">
-            <div style="background-image: url('../images/category/IMG-20220518-WA0002.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
+            <div style="background-image: url('img/gallery/IMG-20220518-WA0002.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
           </div>
           <div class="max-w-sm drop-shadow-lg rounded-xl px-2 py-2">
-            <div style="background-image: url('../images/category/IMG-20220518-WA0003.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
+            <div style="background-image: url('img/gallery/IMG-20220518-WA0003.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
           </div>
           <div class="max-w-sm drop-shadow-lg rounded-xl px-2 py-2">
-            <div style="background-image: url('../images/category/IMG-20220518-WA0004.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
+            <div style="background-image: url('img/gallery/IMG-20220518-WA0004.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
           </div>
           <div class="max-w-sm drop-shadow-lg rounded-xl px-2 py-2">
-            <div style="background-image: url('../images/category/IMG-20220518-WA0005.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
+            <div style="background-image: url('img/gallery/IMG-20220518-WA0005.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
           </div>
           <div class="max-w-sm drop-shadow-lg rounded-xl px-2 py-2">
-            <div style="background-image: url('../images/category/IMG-20220518-WA0006.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
+            <div style="background-image: url('img/gallery/IMG-20220518-WA0006.jpg');" class="bg-cover bg-center bg-no-repeat h-80 w-full rounded-xl"></div>
           </div>
         </div>
       </div>
